Add range slider to change grid size

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
 
     <body>
+        <div class="slider">
+            <input id="gridSize" type="range" min="8" max="64" step="1" value="16">
+        </div>
         <div id="container"></div>
     </body>
 </html>
