--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     </head>
 
     <body>
+        <div class="button-container">
+            <button id="color">Color</button>
+            <button id="rainbow">Rainbow</button>
+            <button id="grey-scale">Greyscale</button>
+            <button id="eraser">Eraser</button>
+            <button id="reset">Reset</button>
+        </div>
         <div class="slider">
             <input id="gridSize" type="range" min="8" max="64" step="1" value="16">
         </div>
