Add color picker and fix greyscale function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
 
     <body>
+        <div class="color-container">
+            <input id="customColor" type="color">
+        </div>
         <div class="button-container">
             <button id="color">Color</button>
             <button id="rainbow">Rainbow</button>
